--- a/src/app/component/grid/grid.component.html
+++ b/src/app/component/grid/grid.component.html
@@ -28,7 +28,7 @@
               <div class="card-body">
 
                   <div class="table-responsive">
-                      <table datatable [dtOptions]="dtOptions" class="datatable table table-stripped mb-0">
+                      <table datatable [attr.dtOptions]="dtOptions" class="datatable table table-stripped mb-0">
                           <thead>
                               <tr>
                                   <th>Name</th>
