--- a/src/app/register/product/product.component.html
+++ b/src/app/register/product/product.component.html
@@ -1,118 +1,230 @@
-<kendo-grid
-            [kendoGridBinding]="gridView"
-            kendoGridSelectBy="id"
-            [selectedKeys]="mySelection"
-            [pageSize]="20"
-            [pageable]="true"
-            [sortable]="true"
-            [groupable]="true"
-            [reorderable]="true"
-            [resizable]="true"
-            [height]="480"
-            [columnMenu]="{ filter: true }"
-        >
-            <ng-template kendoGridToolbarTemplate>
-                <input placeholder="Search in all columns..." kendoTextBox (input)="onFilter($event.target.value)"/>
-                <button kendoGridExcelCommand type="button" icon="file-excel" style="float:right;">Export to Excel</button>
-                <button kendoGridPDFCommand icon="file-pdf" style="float:right;">Export to PDF</button>
-            </ng-template>
-            <kendo-grid-checkbox-column
-                [width]="45"
-                [headerClass]="{'text-center': true}"
-                [class]="{'text-center': true}"
-                [resizable]="false"
-                [columnMenu]="false"
-                showSelectAll="true"
-            ></kendo-grid-checkbox-column>
-            <kendo-grid-column-group title="Employee" [columnMenu]="false">
-                <kendo-grid-column field="full_name" title="Contact Name" [width]="220">
-                    <ng-template kendoGridCellTemplate let-dataItem>
-                        <div class="customer-photo" [ngStyle]="{'background-image' : photoURL(dataItem)}"></div>
-                        <div class="customer-name">{{ dataItem.full_name }}</div>
-                    </ng-template>
-                </kendo-grid-column>
-                <kendo-grid-column field="job_title" title="Job Title" [width]="220">
-                </kendo-grid-column>
-                <kendo-grid-column
-                    field="country"
-                    title="Country"
-                    [width]="100"
-                    [class]="{'text-center': true}"
-                    [resizable]="false"
-                >
-                    <ng-template kendoGridCellTemplate let-dataItem>
-                        <img class="flag" [src]="flagURL(dataItem)" width="30">
-                    </ng-template>
-                </kendo-grid-column>
-                <kendo-grid-column
-                    field="is_online"
-                    title="Status"
-                    [width]="100"
-                    [class]="{'text-center': true}"
-                    [resizable]="false"
-                    filter="boolean"
-                >
-                    <ng-template kendoGridCellTemplate let-dataItem>
-                        <span *ngIf="dataItem.is_online === true" class="badge badge-success">Online</span>
-                        <span *ngIf="dataItem.is_online === false" class="badge badge-danger">Offline</span>
-                    </ng-template>
-                </kendo-grid-column>
-            </kendo-grid-column-group>
-            <kendo-grid-column-group title="Performance" [columnMenu]="false">
-                <!-- <kendo-grid-column
-                    field="rating"
-                    title="Rating"
-                    [width]="110"
-                    [resizable]="false"
-                    filter="numeric"
-                >
-                    <ng-template kendoGridCellTemplate let-dataItem>
-                        <kendo-rating
-                            [value]="dataItem.rating"
-                            [max]="5"
-                        ></kendo-rating>
-                    </ng-template>
-                </kendo-grid-column> -->
-                <kendo-grid-column
-                    field="target"
-                    title="Engagement"
-                    [width]="230"
-                    [resizable]="false"
-                    filter="numeric"
-                >
-                    <ng-template kendoGridCellTemplate let-dataItem>
-                        <kendo-sparkline type="bar"
-                            [data]="dataItem.target"
-                            [tooltip]="{visible: false}"
-                            [transitions]="true"
-                            [seriesDefaults]="{labels: {background: 'none', visible: true, format: '{0}%'}}"
-                        >
-                            <kendo-chart-area opacity="0" [width]="200"></kendo-chart-area>
-                            <kendo-chart-value-axis>
-                                <kendo-chart-value-axis-item [min]="0" [max]="130">
-                                </kendo-chart-value-axis-item>
-                            </kendo-chart-value-axis>
-                        </kendo-sparkline>
-                    </ng-template>
-                </kendo-grid-column>
-                <kendo-grid-column
-                    field="budget"
-                    title="Budget"
-                    [width]="100"
-                    filter="numeric"
-                >
-                    <ng-template kendoGridCellTemplate let-dataItem>
-                        <span [ngClass]="{'red text-bold': dataItem.budget < 0}">{{ dataItem.budget | currency }}</span>
-                    </ng-template>
-                </kendo-grid-column>
-            </kendo-grid-column-group>
-            <kendo-grid-column-group title="Contacts" [columnMenu]="false">
-                <kendo-grid-column field="phone" title="Phone" [width]="130">
-                </kendo-grid-column>
-                <kendo-grid-column field="address" title="Address" [width]="200">
-                </kendo-grid-column>
-            </kendo-grid-column-group>
+<div class="contentsWrap contentsWrap01">
+  <div class="page_title">
+      <div class="page_title">
+        <div class="breadcrumb">
+            <div class="page_navi">
+                <span class="font-khmer-cursive">{{'Common.Label.Register' | translate}}</span>
+            </div>
+            <h3 class="margin-00"><span class="font-khmer-cursive">{{'Category.Label.Category' | translate}}</span></h3>
+        </div>
+    </div>
 
-            <kendo-grid-pdf fileName="Employees.pdf" [repeatHeaders]="true"></kendo-grid-pdf>
-            <kendo-grid-excel fileName="Employees.xlsx"></kendo-grid-excel>
-        </kendo-grid>
+  </div>
+
+  <div class="container01">
+
+      <div class="col-md-12" style="margin-bottom: 15px; padding: 0px;">
+          <strong>{{'Common.Label.Items' | translate: {'value': totalRecord} }}</strong>
+      </div>
+
+      <div>
+
+            <!-- Page Content -->
+<div class="content container-fluid">
+
+  <!-- Page Header -->
+  <div class="page-header">
+      <div class="row align-items-center">
+          <div class="col">
+              <h3 class="page-title">Leaves</h3>
+              <ul class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                  <li class="breadcrumb-item active">Leaves</li>
+              </ul>
+          </div>
+          <div class="col-auto float-right ml-auto">
+              <a class="btn add-btn" data-toggle="modal" data-target="#add_leave"><i class="fa fa-plus"></i>
+                  Add Leave</a>
+          </div>
+      </div>
+  </div>
+  <!-- /Page Header -->
+
+  <!-- Leave Statistics -->
+  <div class="row">
+      <div class="col-md-3">
+          <div class="stats-info">
+              <h6>Today Presents</h6>
+              <h4>12 / 5</h4>
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="stats-info">
+              <h6>Planned Leaves</h6>
+              <h4>8 <span>Today</span></h4>
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="stats-info">
+              <h6>Unplanned Leaves</h6>
+              <h4>1 <span>Today</span></h4>
+          </div>
+      </div>
+      <div class="col-md-3">
+          <div class="stats-info">
+              <h6>Pending Requests</h6>
+              <h4>12</h4>
+          </div>
+      </div>
+  </div>
+  <!-- /Leave Statistics -->
+
+  <!-- Search Filter -->
+  <div class="row filter-row">
+      <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+          <div class="form-group form-focus">
+              <input type="text" class="form-control floating" (input)="searchName($event.target.value)">
+              <label class="focus-label">Employee Name</label>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+          <div class="form-group form-focus select-focus">
+              <select class="select floating form-control" (input)="searchType($event.target.value)">
+                  <option> -- Select -- </option>
+                  <option>Casual Leave</option>
+                  <option>Medical Leave</option>
+                  <option>Loss of Pay</option>
+              </select>
+              <label class="focus-label">Leave Type</label>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+          <div class="form-group form-focus select-focus">
+              <select class="select floating form-control" (input)="searchStatus($event.target.value)">
+                  <option> -- Select -- </option>
+                  <option> Pending </option>
+                  <option> Approved </option>
+                  <option> Rejected </option>
+              </select>
+              <label class="focus-label">Leave Status</label>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+          <div class="form-group form-focus">
+              <div class="cal-icon">
+                  <input class="form-control floating datetimepicker" bsDatepicker type="text"
+                      [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY',  returnFocusToInput: true }"
+                      (bsValueChange)="searchByFrom($event)">
+              </div>
+              <label class="focus-label">From</label>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+          <div class="form-group form-focus">
+              <div class="cal-icon">
+                  <input class="form-control floating datetimepicker" bsDatepicker type="text"
+                      [bsConfig]="{ dateInputFormat: 'DD-MM-YYYY',  returnFocusToInput: true }"
+                      (bsValueChange)="searchByTo($event)">
+              </div>
+              <label class="focus-label">To</label>
+          </div>
+      </div>
+      <div class="col-sm-6 col-md-3 col-lg-3 col-xl-2 col-12">
+          <a class="btn btn-success btn-block"> Search </a>
+      </div>
+  </div>
+  <!-- /Search Filter -->
+
+  <div class="row">
+      <div class="col-md-12">
+          <div class="table-responsive">
+              <table datatable [dtOptions]="dtOptions" id="datatable"
+                  class="table table-striped custom-table mb-0 datatable">
+                  <thead>
+                      <tr>
+                          <th>Id</th>
+                          <th>Images</th>
+                          <th>Category</th>
+                          <th>Name</th>
+                          <th>description</th>
+                          <th>mobile Show</th>
+                          <th>web Show</th>
+                          <th>createBy</th>
+                          <th>modifyBy</th>
+                          <th>Status</th>
+                          <th class="text-right">Actions</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr *ngFor="let row of productDetails; let i = index">
+
+                          <td width = "20">{{row.id}}</td>
+                          <td>
+                            <h2 class="table-avatar">
+                                <a routerLink="/employees/employeeprofile" class="avatar">
+                                  <img alt="" [src]="url + row.resourceImgId">
+                                </a>
+                            </h2>
+                        </td>
+                          <td>{{row.catgoryName}}</td>
+                          <td>{{row.name}}</td>
+                          <td>{{row.description}}</td>
+                          <td>{{row.mobileShow }}</td>
+                          <td>{{row.webShow}}</td>
+                          <td>{{row.createBy}}</td>
+                          <td>{{row.modifyBy}}</td>
+                          <td class="text-center">
+                              <div class="dropdown action-label">
+                                  <a class="btn btn-white btn-sm btn-rounded dropdown-toggle" data-toggle="dropdown"
+                                      aria-expanded="false">
+                                      <i class="fa fa-dot-circle-o text-purple"></i>
+                                      {{'New' || statusValue}}
+                                  </a>
+                                  <div class="dropdown-menu dropdown-menu-right">
+                                      <a class="dropdown-item" (click)="getStatus('New')"><i
+                                              class="fa fa-dot-circle-o text-purple"></i>
+                                          New</a>
+                                      <a class="dropdown-item" (click)="getStatus('Pending')"><i
+                                              class="fa fa-dot-circle-o text-danger"></i>
+                                          Pending</a>
+                                      <a class="dropdown-item" (click)="getStatus('Approved')"><i
+                                              class="fa fa-dot-circle-o text-success"></i> Approved</a>
+                                      <a class="dropdown-item" (click)="getStatus('Declined')"><i
+                                              class="fa fa-dot-circle-o text-danger"></i>
+                                          Declined</a>
+                                  </div>
+                              </div>
+                          </td>
+                          <td class="text-right">
+                              <div class="dropdown dropdown-action">
+                                  <a class="action-icon dropdown-toggle" data-toggle="dropdown"
+                                      aria-expanded="false"><i class="material-icons">more_vert</i></a>
+                                  <div class="dropdown-menu dropdown-menu-right">
+                                      <a class="dropdown-item" data-toggle="modal" data-target="#edit_leave"><i class="fa fa-pencil m-r-5"></i> Edit</a>
+                                      <a class="dropdown-item" data-toggle="modal" data-target="#delete_approve"><i class="fa fa-trash-o m-r-5"></i> Delete</a>
+                                  </div>
+                              </div>
+                          </td>
+                      </tr>
+                  </tbody>
+              </table>
+          </div>
+      </div>
+  </div>
+</div>
+<!-- /Page Content -->
+
+      </div>
+
+      <div class="table_control">
+
+        <div class="col-md-3">
+          <button class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00 border-color-red">
+            <span class="k-icon k-i-minus-circle color-red"></span>
+            <span class="border-color-red color-red margin-left-5px">{{'Common.Button.Delete' | translate}}</span>
+        </button>
+        </div>
+
+
+          <div class="c_btn">
+            <button class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00">
+                <span class="k-icon k-i-plus-circle "></span>
+                <span class="margin-left-5px">{{'Common.Button.New' | translate}}</span>
+            </button>
+
+        </div>
+
+      </div>
+
+  </div>
+</div>
