--- a/src/app/register/product/product.component.css
+++ b/src/app/register/product/product.component.css
@@ -17,3 +17,12 @@
   overflow: hidden !important;
   text-overflow: clip !important;
 } */
+
+.dropdown-item {
+  cursor: pointer;
+
+}
+
+.dropdown-menu-right {
+  padding: 0;
+}
